<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HttpTest.LoginActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/user_center_userhead_bg"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/head_bg"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/head"
            app:civ_border_width="2dp"
            android:layout_centerInParent="true"
            app:civ_border_color="@color/white"/>


    </RelativeLayout>

    <LinearLayout style="@style/wrap_layout"
        android:layout_marginTop="250dp"
        android:id="@+id/user_center_linearLin1"
        >
        <!-- 上圆角-->
        <LinearLayout style="@style/top_layout">
            <TextView style="@style/usertext" android:text="@string/user_center_title1" />
            <ImageView style="@style/img_arrow"/>
        </LinearLayout>

        <!-- 分割线 -->
        <View style="@style/bg_line"/>
        <!-- 无圆角-->
        <LinearLayout style="@style/mid_layout">
            <TextView style="@style/usertext" android:text="@string/user_center_title2" />
            <ImageView style="@style/img_arrow"/>
        </LinearLayout>
        <View style="@style/bg_line"/>
        <!-- 下圆角-->
        <LinearLayout style="@style/bottom_layout">
            <TextView style="@style/usertext" android:text="@string/user_center_title3" />
            <ImageView style="@style/img_arrow"/>
        </LinearLayout>

    </LinearLayout>


    <!-- 全圆角
    <LinearLayout style="@style/wrap_layout"
        android:id="@+id/user_center_LinearLin2"
        android:layout_below="@+id/user_center_linearLin1">
        <LinearLayout style="@style/single_layout">
            <TextView style="@style/usertext" android:text="辅助功能"/>
            <ImageView style="@style/img_arrow"/>
        </LinearLayout>

    </LinearLayout>
    -->

</RelativeLayout>

