<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HttpTest.LoginActivity"
    android:background="@drawable/background_login"
    >
    <!--
    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:height="150dp"
        android:gravity="center_vertical"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:height="150dp"
        android:gravity="center_vertical"
        android:text="Next"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:height="150dp"
        android:gravity="center_vertical"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="30sp" />
-->

    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/tvLogo_text"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLogo"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/etEmail_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="20sp" />

    <!-- imeActionLabel设置编辑文本“下一步”的显示内容，
    imeActionId设置“下一步”的ID， 设置“完成”，设置输入格式显示***-->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etName"
        android:layout_alignStart="@+id/etName"
        android:layout_below="@+id/etName"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/etPassword_hint"
        android:padding="10dp"
        android:textSize="20sp"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        />

    <TextView
        android:id="@+id/tvForgot"
        style="@android:style/TextAppearance.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Forgot password? Tap here"
        android:textColor="@color/white" />


    <Button
        android:id="@+id/subBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvForgot"
        android:text="登陆"
        android:textColor="@color/white"
        android:background="@drawable/background_button_div"/>

    <!--<AutoCompleteTextView-->
        <!--android:id="@+id/tvInfo"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:layout_below="@+id/subBtn"-->
        <!--android:textColor="@color/white"-->
        <!--android:text="服务器返回信息："-->
        <!--/>-->

    <TextView
        android:id="@+id/tvPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Tap here for our privacy policy."
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvPolicy"
        android:layout_centerHorizontal="true"
        android:text="between you and your partner."
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:text="Everything you share in Pair is private"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />


</RelativeLayout>
